<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/name"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/minister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingStart="10dp"
                android:text="@string/minister_member"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/party"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/name"
                android:textColor="@color/finnish_blue"
                android:textSize="34sp"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/name"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/constituency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/constituency"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/age"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </ScrollView>
</layout>