<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/welcome"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/browse_parliament_members_grouped_by"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/party_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:text="@string/parties"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/const_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:text="@string/constituencies"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/party_button"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>